Avoid spinner overlap with links bar

--- a/frontend/static/main.css
+++ b/frontend/static/main.css
@@ -85,9 +85,8 @@ textarea::placeholder {
 }
 
 img.centered {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
+    display: block;
+    margin: 0 auto;;
 }
 
 .boxed-text {
